<resources>
    <string name="app_name">福大成绩查询</string>

    <string name="user">学号</string>
    <string name="user_hint">请输入教务处账号</string>
    <string name="action_settings">Settings</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入教务处密码</string>
    <string name="login">登陆</string>
    <string name="login_outline">离线登陆</string>
    <string name="login_error">学号或密码错误</string>
    <string name="login_success">登陆成功</string>
    <string name="login_faile">登陆失败</string>
    <string name="course_name">课程名称</string>
    <string name="course_credit">学分</string>
    <string name="course_score_point">绩点</string>
    <string name="course_score">成绩</string>
    <string name="refresh">刷新</string>
    <string name="show_point">学期绩点：</string>
    <string name="get_html">获取数据中……</string>
    <string name="parse_html">更新数据库中……</string>
    <string name="s201301">大一上</string>
    <string name="s201302">大一下</string>
    <string name="s201401">大二上</string>
    <string name="s201402">大二下</string>
    <string name="s201501">大三上</string>
    <string name="login_remember">记住账号密码</string>
    <string name="auto_login">自动登录</string>
    <string name="logout">注销</string>
</resources>
