<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <LinearLayout
        android:id="@+id/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        >

        <Spinner
            android:id="@+id/mySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>

        <Button
            android:id="@+id/logout"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/logout"/>

        <Button
            android:id="@+id/pointButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/course_score_point"
            />

        <Button
            android:id="@+id/refresh"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/refresh"
            />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/tools"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/course_name"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/course_credit"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/course_score_point"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/course_score"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head">

    </ListView>

</RelativeLayout>